istioctl/1-envoyfilter-to-http-and-grpc/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example
  namespace: default
spec:
  gateways:
  - example
  hosts:
  - "*"
  http:
  - match:
    - uri:
        exact: "/"
    route:
    - destination:
        host: hellosvc
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/grpctesting.EchoService"
    route:
    - destination:
        host: grpc-greeter-go
        port:
          number: 80
  - route:
    - destination:
        host: hellosvc
        port:
          number: 8080
